# hallx

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.ta.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release.yml  scorecard.yml  test.yml
docs/: PRODUCTION.md  README.de.md  README.en.md  README.hi.md  README.ja.md  README.kn.md  README.ml.md  README.ta.md  README.zh.md  USAGE.md
docs/website/: docs.html  faq.html  index.html  robots.txt  samples.html  shared.js  sitemap.xml  style.css
hallx/: __init__.py  calibration.py  consistency.py  core.py  grounding.py  retry.py  schema.py  scoring.py  types.py  uqlm.py
hallx/adapters/: __init__.py  anthropic.py  base.py  gemini.py  grok.py  huggingface.py  ollama.py  openai.py  openrouter.py  perplexity.py
hallx/utils/: text.py
samples/: async_openai_adapter.py  async_openai_adapter_no_context.py  async_openai_feedback_calibration.py  basic_sync.py  check_json_only.py  custom_embeddings.py  feedback_calibration.py  providers_matrix.py  retry_strategy.py  strict_mode.py
samples/data/: hallx-feedback.sqlite3
tests/: test_adapters.py  test_calibration.py  test_calibration_paths.py  test_consistency.py  test_grounding.py  test_production.py  test_retry.py  test_schema.py  test_scoring.py
uqlm/: __init__.py
