[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hallx"
version = "0.1.0"
description = "Lightweight hallucination risk scoring for LLM outputs"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Dhanush Kandhan" }
]
maintainers = [
  { name = "Dhanush Kandhan" }
]
keywords = ["llm", "hallucination", "validation", "scoring", "ai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "jsonschema>=4.0.0,<5.0.0",
  "rapidfuzz>=3.0.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/dhanushk-offl/hallx"
Repository = "https://github.com/dhanushk-offl/hallx"
Issues = "https://github.com/dhanushk-offl/hallx/issues"
Documentation = "https://github.com/dhanushk-offl/hallx#readme"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "build>=1.2.0,<2.0.0",
  "twine>=6.0.0,<7.0.0",
]

[tool.setuptools]
packages = ["hallx", "hallx.utils", "hallx.adapters"]

[tool.setuptools.package-data]
hallx = ["py.typed"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
